<resources>
    <string name="app_name">Victor_Vallecillos_UF1_ACT9</string>
    <string name="horizontalButton1">Botó 1</string>
    <string name="horizontalButton2">Botó 2</string>
    <string name="horizontalButton3">Canviar de layout</string>
    <string name="verticalButton3">Botó 3</string>
    <string name="verticalButton2">Botó 2</string>
    <string name="verticalButton1">Canviar de layout</string>
</resources>