<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:insetLeft="50dp"
            android:insetTop="50dp"
            android:insetRight="50dp"
            android:insetBottom="50dp"
            android:text="@string/verticalButton1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:insetLeft="50dp"
            android:insetTop="50dp"
            android:insetRight="50dp"
            android:insetBottom="50dp"
            android:text="@string/verticalButton2" />

        <Button
            android:id="@+id/layoutButton2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:insetLeft="50dp"
            android:insetTop="50dp"
            android:insetRight="50dp"
            android:insetBottom="50dp"
            android:text="@string/verticalButton3" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>